@@ -45,27 +45,30 @@ class Main extends Component {
                         </tr>
                     </thead>
                     <tbody id="productList">
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>iPhone x</td>
-                            <td>1 Eth</td>
-                            <td>0x39C7BC5496f4eaaa1fF75d88E079C22f0519E7b9</td>
-                            <td><button className="buyButton">Buy</button></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Macbook Pro</td>
-                            <td>3 eth</td>
-                            <td>0x39C7BC5496f4eaaa1fF75d88E079C22f0519E7b9</td>
-                            <td><button className="buyButton">Buy</button></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Airpods</td>
-                            <td>0.5 eth</td>
-                            <td>0x39C7BC5496f4eaaa1fF75d88E079C22f0519E7b9</td>
-                            <td><button className="buyButton">Buy</button></td>
-                        </tr>
+                        { this.props.products.map((product, key) => {
+                            return(
+                                <tr key={key}>
+                                    <th scope="row">{product.id.toString()}</th>
+                                    <td>{product.name}</td>
+                                    <td>{window.web3.utils.fromWei(product.price.toString(), 'Ether')} Eth</td>
+                                    <td>{product.owner}</td>
+                                    <td>
+                                        { !product.purchased
+                                            ? <button
+                                                name={product.id}
+                                                value={product.price}
+                                                onClick={(event) => {
+                                                    this.props.purchaseProduct(event.target.name, event.target.value)
+                                                }}
+                                              >
+                                                Buy
+                                              </button>
+                                            : null
+                                        }
+                                    </td>
+                                </tr>
+                            )
+                        })}
                     </tbody>
                 </table>
             </div>
