@@ -1,3 +1,4 @@
+Wired up the buyers interface and made the buy button interactive.
 Constructed the frontend scaffolding for adding products to sell.
 Built the Ethereum framework in node to connect wallets and web3.
 Added the ability to purchased items and tests to ensure transactions are processed properly.
